--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: You Forgot To Set the Title in _config.yml
+title: History Buffs Book Club
 # email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  You Forgot To Set the Description in _config.yml
+  Events and info for the History Buffs book club, originally founded in Alexandria, VA in 2013, now mostly online
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
